; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_create_disp_obj.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_create_disp_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.disp_obj = type { i32, %struct.TYPE_3__ }

@disp_obj_vtbl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_3__* ()* @create_disp_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_3__* @create_disp_obj() #0 {
  %1 = alloca %struct.disp_obj*, align 8
  %2 = call %struct.disp_obj* @CoTaskMemAlloc(i32 16)
  store %struct.disp_obj* %2, %struct.disp_obj** %1, align 8
  %3 = load %struct.disp_obj*, %struct.disp_obj** %1, align 8
  %4 = getelementptr inbounds %struct.disp_obj, %struct.disp_obj* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32* @disp_obj_vtbl, i32** %5, align 8
  %6 = load %struct.disp_obj*, %struct.disp_obj** %1, align 8
  %7 = getelementptr inbounds %struct.disp_obj, %struct.disp_obj* %6, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.disp_obj*, %struct.disp_obj** %1, align 8
  %9 = getelementptr inbounds %struct.disp_obj, %struct.disp_obj* %8, i32 0, i32 1
  ret %struct.TYPE_3__* %9
}

declare dso_local %struct.disp_obj* @CoTaskMemAlloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
